// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DecisionSupportNotice > renders compact variant with local-only notice and future egress caveat 1`] = `
<section
  aria-label="Operativ grense og lokal datalagring"
  class="rounded-2xl border border-amber-200 bg-amber-50 text-amber-950 p-3"
>
  <p
    class="text-xs font-black uppercase tracking-wide"
  >
    Operativ grense · lokal MVP
  </p>
  <p
    class="mt-1 text-xs leading-5 font-semibold"
  >
    Beslutningsstøtte, ikke et offisielt kommandosystem. Data lagres bare lokalt. Ikke legg inn persondata.
  </p>
  <p
    class="mt-1 text-xs font-semibold"
  >
    Ekstern kontekst (MET/Kartverket/NVE) legges til post-MVP.
  </p>
  <nav
    aria-label="MVP-grenser"
    class="mt-2 flex flex-wrap gap-2 text-xs font-black"
  >
    <a
      class="inline-flex min-h-11 items-center rounded-full bg-white px-4 py-2 text-amber-950 ring-1 ring-amber-200"
      href="/begrensninger"
    >
      Grenser
    </a>
    <a
      class="inline-flex min-h-11 items-center rounded-full bg-white px-4 py-2 text-amber-950 ring-1 ring-amber-200"
      href="/kjente-begrensninger"
    >
      Kjente begrensninger
    </a>
    <a
      class="inline-flex min-h-11 items-center rounded-full bg-white px-4 py-2 text-amber-950 ring-1 ring-amber-200"
      href="/data-pa-enheten"
    >
      Data på enheten
    </a>
  </nav>
</section>
`;

exports[`DecisionSupportNotice > renders full variant with local-only notice and future egress caveat 1`] = `
<section
  aria-label="Operativ grense og lokal datalagring"
  class="rounded-2xl border border-amber-200 bg-amber-50 text-amber-950 p-4"
>
  <p
    class="text-xs font-black uppercase tracking-wide"
  >
    Operativ grense · lokal MVP
  </p>
  <p
    class="mt-1 text-sm font-semibold"
  >
    Beredskapsboka er beslutningsstøtte og ikke et offisielt kommando-, ordre- eller hendelsessystem. Data lagres bare lokalt i denne nettleseren. Ikke legg inn persondata, pasientdata eller private/skjermede tilfluktsromdata.
  </p>
  <p
    class="mt-2 text-xs font-semibold"
  >
    Ekstern kontekst (posisjon/søk til MET/Kartverket/NVE) legges til post-MVP. Ingen data sendes ut av appen i MVP.
  </p>
  <nav
    aria-label="MVP-grenser"
    class="mt-3 flex flex-wrap gap-2 text-xs font-black"
  >
    <a
      class="inline-flex min-h-11 items-center rounded-full bg-white px-4 py-2 text-amber-950 ring-1 ring-amber-200"
      href="/begrensninger"
    >
      Grenser
    </a>
    <a
      class="inline-flex min-h-11 items-center rounded-full bg-white px-4 py-2 text-amber-950 ring-1 ring-amber-200"
      href="/kjente-begrensninger"
    >
      Kjente begrensninger
    </a>
    <a
      class="inline-flex min-h-11 items-center rounded-full bg-white px-4 py-2 text-amber-950 ring-1 ring-amber-200"
      href="/data-pa-enheten"
    >
      Data på enheten
    </a>
  </nav>
</section>
`;
